{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "863efd72-89b0-46aa-bca3-a16340144912",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "5d35b830-721a-44fe-b480-f2b32efc86fe",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JoinLobby",
                    "type": "Button",
                    "id": "47a1f951-d0ff-4507-ac3d-a0378978fe61",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ExitLobby",
                    "type": "Button",
                    "id": "00014ce8-62ff-4732-807a-1215643a42b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "One Modifier",
                    "id": "03b792e5-fe99-44eb-983b-c3210e2b2c4d",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoinLobby",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Modifier",
                    "id": "c6c1b590-368e-4b72-b827-a0df864237ba",
                    "path": "<DualShockGamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoinLobby",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "e133155a-6c0b-4f0d-a458-76d02010f978",
                    "path": "<DualShockGamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "JoinLobby",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0a4c08f5-2b8b-4d8e-abf4-797caceff3d9",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f3ed8f5-8e2a-4c3f-8a26-3489a3c38162",
                    "path": "<DualShockGamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ExitLobby",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<DualShockGamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}